# meson-ninja-vs

./: .gitignore  LICENSE  README.md  clang-tidy-diff.py  ninja-vs.py  ninja_vs.py  pyproject.toml  run-clang-tidy.py
src/meson-ninja-vs/: ninja_vs.py
